# AmbulanceEmergencyManagement

./: README.md
Model-B/MediMapRedo/: app.py  data_processor.py  pyproject.toml  spatial_search.py
Model-B/MediMapRedo/static/css/: style.css
Model-B/MediMapRedo/static/js/: app.js
Model-B/MediMapRedo/templates/: base.html  index.html
Model-B/MediMapRedo/uploads/: Maharashtra_Delhi_hospitals_20250831.xlsx  Nagaland_hospitals.xlsx  bihar_hospitals_populated_partial.xlsx  hospitals_details.xlsx
backend/: app.py  requirements.txt
backend/data/: AMBULANCE - Copy.csv  PHC_Final_Cleaned_File - Copy.xlsx  hospital_data_20250831_133254.xlsx
backend/models/: ammbulance_model.py  call_model.py
backend/reports/: report_20250827_131412.txt  report_20250829_103541.txt  report_20250829_115957.txt  report_20250902_094100.txt  report_20250902_094158.txt  report_20250903_123747.txt  report_20250903_123946.txt  report_20250903_124010.txt  report_20250907_110651.txt  report_20250907_111058.txt  report_20250907_111902.txt  report_20250910_190839.txt  report_20250910_193738.txt  report_20250912_095228.txt  report_20250912_095442.txt  report_20250912_095632.txt  report_20250917_150847.txt  report_20250917_150945.txt  report_20250917_151533.txt  report_20250917_151652.txt  report_20250917_152010.txt  report_20250918_123806.txt  report_20250919_100322.txt  report_20250919_103525.txt  report_20250922_141428.txt  report_20250922_141508.txt  report_20251122_114550.txt  (+4 more)
frontend/: README.md  index.html  index.tsx  metadata.json  package-lock.json  package.json
(+5 files in other folders)
